# simba-parser

./: .clang-format  .gitignore  CMakeLists.txt  README.md  for_each_macro.h  main.cpp  pcap.h
json/: json.cpp  json.h
reader/: reader.cpp  reader.h
simba/: macro.h  message.h  sbe_reader.h  simba.cpp  simba.h
simba/types/: basic.h  enums.h  json.h  sets.h  struct.h
